sidebar css fix

--- a/.htaccess
+++ b/.htaccess
@@ -4,4 +4,5 @@ RewriteRule ^$ /home [L,R=301]
 RewriteRule ^home$ /whisper/home/index.php [L]
 RewriteRule ^login$ /whisper/login/index.php [L]
 RewriteRule ^signup$ /whisper/signup/index.php [L]
+RewriteRule ^logout$ /whisper/logout/index.php [L]
 RewriteRule ^profile$ /whisper/profile/index.php [L]
