--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,8 @@ RewriteRule ^login$ /whisper/login/index.php [L]
 RewriteRule ^signup$ /whisper/signup/index.php [L]
 RewriteRule ^logout$ /whisper/logout/index.php [L]
 RewriteRule ^profile$ /whisper/profile/index.php [L]
+
+# Rewrite rule for user profiles
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^u/([^/]+)/?$ /whisper/user/index.php?username=$1 [L,QSA]
