--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 RewriteEngine On
 
 RewriteRule ^$ /home [L,R=301]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteRule ^home$ /whisper/home/index.php [L]
 RewriteRule ^login$ /whisper/login/index.php [L]
 RewriteRule ^signup$ /whisper/signup/index.php [L]
@@ -8,9 +12,11 @@ RewriteRule ^logout$ /whisper/logout/index.php [L]
 RewriteRule ^profile$ /whisper/profile/index.php [L]
 
 RewriteRule ^server/vote$ /server/vote.php [L]
-RewriteRule ^server/posts$ /server/posts.php [L]
+
+# Rewrite rule for posts server
+RewriteRule ^server/posts/?$ /server/posts.php [L]
+RewriteRule ^server/posts/([^/]+)$ /server/posts.php?username=$1 [L]
+
 
 # Rewrite rule for user profiles
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^u/([^/]+)/?$ /whisper/user/index.php?username=$1 [L,QSA]
