--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,8 @@ RewriteRule ^home$ /whisper/home/index.php [L]
 RewriteRule ^login$ /whisper/login/index.php [L]
 RewriteRule ^signup$ /whisper/signup/index.php [L]
 RewriteRule ^logout$ /whisper/logout/index.php [L]
-RewriteRule ^profile$ /whisper/profile/index.php [L]
+RewriteRule ^profile$ /server/profile.php [L]
+RewriteRule ^maintenance$ /whisper//maintenance/ [L]
 
 RewriteRule ^server/vote$ /server/vote.php [L]
 
