--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^home$ /whisper/home/index.php [L]
 RewriteRule ^login$ /whisper/login/index.php [L]
 RewriteRule ^signup$ /whisper/signup/index.php [L]
+RewriteRule ^following$ /whisper/following/index.php [L]
 RewriteRule ^maintenance$ /whisper/maintenance/ [R=301,L]
 
 # Redirect servers
