added message button to profile

--- a/.htaccess
+++ b/.htaccess
@@ -40,3 +40,4 @@ RewriteRule ^server/posts/?$ /server/posts.php [L]
 RewriteRule ^server/posts/([^/]+)$ /server/posts.php?username=$1 [L]
 RewriteRule ^u/([^/]+)/?$ /whisper/user/index.php?username=$1 [L,QSA]
 RewriteRule ^server/publicKeyJwk/([^/]+)/?$ /server/publicKeyJwk.php?username=$1 [L,QSA]
+RewriteRule ^message/([^/]+)/?$ /server/message.php?username=$1 [L,QSA]
