search bar complete

--- a/.htaccess
+++ b/.htaccess
@@ -41,3 +41,5 @@ RewriteRule ^server/posts/([^/]+)$ /server/posts.php?username=$1 [L]
 RewriteRule ^u/([^/]+)/?$ /whisper/user/index.php?username=$1 [L,QSA]
 RewriteRule ^server/publicKeyJwk/([^/]+)/?$ /server/publicKeyJwk.php?username=$1 [L,QSA]
 RewriteRule ^message/([^/]+)/?$ /server/message.php?username=$1 [L,QSA]
+RewriteRule ^search/([^/]+)/?$ /whisper/search_results/index.php?query=$1 [L,QSA]
+RewriteRule ^server/search/([^/]+)/?$ /server/search.php?query=$1 [L,QSA]
