Signup fix part1

--- a/.htaccess
+++ b/.htaccess
@@ -24,6 +24,7 @@ RewriteRule ^server/vote$ /server/vote.php [L]
 RewriteRule ^server/follow$ /server/follow.php [L]
 RewriteRule ^server/login$ /server/login.php [L]
 RewriteRule ^server/signup$ /server/signup.php [L]
+RewriteRule ^server/signup_verify$ /server/signup_verify.php [L]
 RewriteRule ^server/create/post$ /server/create_post.php [L]
 RewriteRule ^server/update/username$ /server/update_username.php [L]
 RewriteRule ^server/update/profile$ /server/update_profile.php [L]
@@ -34,6 +35,7 @@ RewriteRule ^server/post/publicKeyJWK$ /server/post_publicKeyJwk.php [L]
 RewriteRule ^server/following/?$ /server/following.php [L]
 RewriteRule ^server/conversations/?$ /server/conversations.php [L]
 RewriteRule ^server/keyPairId/?$ /server/keyPairId.php [L]
+RewriteRule ^server/getUUID/?$ /server/getUUID.php [L]
 RewriteRule ^server/messages/([^/]+)$ /server/messages.php?username=$1 [L]
 RewriteRule ^server/posts/?$ /server/posts.php [L]
 RewriteRule ^server/posts/([^/]+)$ /server/posts.php?username=$1 [L]
